# shorts

./: .env  .gitignore  Cargo.toml  diesel.toml  readme.md
migrations/2024-06-18-141229_create_users/: up.sql
migrations/2024-06-21-191619_create_shorts/: down.sql  up.sql
src/: config.rs  db.rs  lib.rs  main.rs  schema.rs
src/handlers/: health.rs  mod.rs  shorts.rs  user.rs
src/middleware/: auth_middleware.rs
src/models/: mod.rs  shorts.rs  user.rs
src/routes/: health.rs  mod.rs  shorts.rs  user.rs
src/utils/: mod.rs
