[package]
name = "news-shorts"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "regex"] }
syn = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8.9"
bcrypt = "0.15.1"
jsonwebtoken = "7.0.1"
tide = "0.14.0"
chrono = "0.4"

[dependencies.regex]
version = "1"
features = ["unicode-case"]

[dependencies.diesel]
version = "2.0.0"
features = ["postgres", "r2d2", "chrono"]
